[gd_scene load_steps=2 format=3 uid="uid://cnil5t8gbosn3"]

[ext_resource type="Script" uid="uid://e4jfh5o3fms0" path="res://GUI/options_menu.gd" id="1_s8lxi"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00107, 1)
script = ExtResource("1_s8lxi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.719)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -92.5
offset_right = 192.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainerMusic" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MusicLabel" type="Label" parent="VBoxContainer/HBoxContainerMusic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainerMusic"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="HBoxContainerSfx" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SfxLabel" type="Label" parent="VBoxContainer/HBoxContainerSfx"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effects Volume"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer/HBoxContainerSfx"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="DedicatedBlunderToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Powershoot using triangle"

[node name="PhysicsInterpolationToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Physics Interpolation"

[node name="SpeedrunModeToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Speedrun mode"

[node name="RenderBackgroundToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Render 3D Backgrounds"

[node name="AccessibilityToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Accessibility Mode"

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen mode"

[node name="AllPowerups" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Grant all powerups"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
